src/test/deca/syntax/invalid/erreur_decl_init_1.deca
// Description:
//    mauvaise déclaration/initialisation
//
// Resultats:
//    Erreur de syntaxe
//    ligne 8 : "mismatched input '<' expecting {',', ';'}"

{ int x<2 ;}
